# llvm-normalizer

./: CMakeLists.txt  README.md  README.org
.github/ISSUE_TEMPLATE/: bug_report.md
include/: CombineGEP.h  Common.h  Debug.h  ElimAllocaStoreArg.h  ElimIdenticalInstrs.h  ElimInlineAsm.h  ElimUnusedAuxFunction.h  ElimUnusedGlobal.h  InitGlobal.h  InlineSimpleFunction.h  UninlineInstruction.h
src/: CMakeLists.txt  CombineGEP.cpp  Common.cpp  Debug.cpp  ElimAllocaStoreArg.cpp  ElimIdenticalInstrs.cpp  ElimInlineAsm.cpp  ElimUnusedAuxFunction.cpp  ElimUnusedGlobal.cpp  InitGlobal.cpp  InlineSimpleFunction.cpp  Normalizer.cpp  UninlineInstruction.cpp
